--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -62,6 +62,57 @@
                         <div class="video-box">
                             <div class="cover">
                                 <img class="lazy"
+                                     src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.jpg"
+                                     alt="卡达凯斯小镇">
+                                <i class="icon-play"></i>
+                            </div>
+                            <div class='loading'></div>
+                            <video muted=""
+                                   data-original="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.MP4"
+                                   loop="loop" width="100%"></video>
+                        </div>
+                        <h2>《卡达凯斯小镇》</h2>
+
+                    </li>
+
+                    <li>
+                        <div class="video-box">
+                            <div class="cover">
+                                <img class="lazy"
+                                     src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E7%8E%8B%E7%89%8C%E9%A3%9E%E8%A1%8C%E5%91%98.jpg"
+                                     alt="王牌飞行员">
+                                <i class="icon-play"></i>
+                            </div>
+                            <div class='loading'></div>
+                            <video muted=""
+                                   data-original="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E7%8E%8B%E7%89%8C%E9%A3%9E%E8%A1%8C%E5%91%98.MP4"
+                                   loop="loop" width="100%"></video>
+                        </div>
+                        <h2>《王牌飞行员》</h2>
+
+                    </li>
+
+                    <li>
+                        <div class="video-box">
+                            <div class="cover">
+                                <img class="lazy"
+                                     src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E8%94%A1%E5%B0%96%E5%B0%BE%E5%B1%B1.jpg"
+                                     alt="蔡尖尾山">
+                                <i class="icon-play"></i>
+                            </div>
+                            <div class='loading'></div>
+                            <video muted=""
+                                   data-original="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E8%94%A1%E5%B0%96%E5%B0%BE%E5%B1%B1.MP4"
+                                   loop="loop" width="100%"></video>
+                        </div>
+                        <h2>《蔡尖尾山》</h2>
+
+                    </li>
+
+                    <li>
+                        <div class="video-box">
+                            <div class="cover">
+                                <img class="lazy"
                                      src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E7%BE%8A%E5%92%A9%E5%92%A9.png"
                                      alt="羊咩咩">
                                 <i class="icon-play"></i>
