--- a/src/main/webapp/WEB-INF/templates/photo/index.html
+++ b/src/main/webapp/WEB-INF/templates/photo/index.html
@@ -70,6 +70,11 @@
             </div>
             <ul id="video-list">
                 <li>
+                    <div class="poster" style="background: #333 url('https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.jpg') center no-repeat; background-size:contain;"
+                         data-video="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.MP4"><em></em></div>
+                    <div class="name ellipsis"> 《卡达凯斯小镇》</div>
+                </li>
+                <li>
                     <div class="poster" style="background: #333 url('https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E7%8E%8B%E7%89%8C%E9%A3%9E%E8%A1%8C%E5%91%98.jpg') center no-repeat; background-size:contain;"
                          data-video="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E7%8E%8B%E7%89%8C%E9%A3%9E%E8%A1%8C%E5%91%98.MP4"><em></em></div>
                     <div class="name ellipsis"> 《王牌飞行员》</div>
