--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -62,6 +62,23 @@
                         <div class="video-box">
                             <div class="cover">
                                 <img class="lazy"
+                                     src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%9F%AD%E7%BE%8E%E5%8F%A4%E6%9D%91.jpg"
+                                     alt="埭美古村">
+                                <i class="icon-play"></i>
+                            </div>
+                            <div class='loading'></div>
+                            <video muted=""
+                                   data-original="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E5%9F%AD%E7%BE%8E%E5%8F%A4%E6%9D%91.MOV"
+                                   loop="loop" width="100%"></video>
+                        </div>
+                        <h2>《埭美古村》</h2>
+
+                    </li>
+
+                    <li>
+                        <div class="video-box">
+                            <div class="cover">
+                                <img class="lazy"
                                      src="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.jpg"
                                      alt="卡达凯斯小镇">
                                 <i class="icon-play"></i>
