--- a/src/main/webapp/WEB-INF/templates/photo/index.html
+++ b/src/main/webapp/WEB-INF/templates/photo/index.html
@@ -70,6 +70,11 @@
             </div>
             <ul id="video-list">
                 <li>
+                    <div class="poster" style="background: #333 url('https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%9F%AD%E7%BE%8E%E5%8F%A4%E6%9D%91.jpg') center no-repeat; background-size:contain;"
+                         data-video="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E5%9F%AD%E7%BE%8E%E5%8F%A4%E6%9D%91.MOV"><em></em></div>
+                    <div class="name ellipsis"> 《埭美古村》</div>
+                </li>
+                <li>
                     <div class="poster" style="background: #333 url('https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog-img/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.jpg') center no-repeat; background-size:contain;"
                          data-video="https://zengqingjie.oss-cn-hangzhou.aliyuncs.com/vlog/%E5%8D%A1%E8%BE%BE%E5%87%AF%E6%96%AF%E5%B0%8F%E9%95%87.MP4"><em></em></div>
                     <div class="name ellipsis"> 《卡达凯斯小镇》</div>
